--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,25 @@
-name: 'Lint Code'
+name: Lint Python Files
 
 on:
   push:
-    branches: [master, main]
+    branches: [ main ]
   pull_request:
-    branches: [master, main]
+    branches: [ main ]
 
 jobs:
-  lint_python:
-    name: Lint Python Files
+  lint:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
 
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.12
+        python-version: '3.x'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+    - name: Install Flake8
+      run: pip install flake8
 
-    - name: Print working directory
-      run: pwd
-
-    - name: Run Linter
-      run: |
-        pwd
-        # This command finds all Python files recursively and runs flake8 on them
-        find . -name "*.py" -exec flake8 {} +
-        echo "Linted all the python files successfully"
-
-  lint_js:
-      name: Lint JavaScript Files
-      runs-on: ubuntu-latest
-
-      steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-
-      - name: Install JSHint
-        run: npm install jshint --global
-
-      - name: Run Linter
-        run: |
-          # This command finds all JavaScript files recursively and runs JSHint on them
-          find ./server/database -name "*.js" -exec jshint {} +
-          echo "Linted all the js files successfully"
+    - name: Run Flake8
+      run: flake8
